# nucleo_wb55rg

./: CMakeLists.txt  prj.conf
script/: bsp_uart_digital.py
src/: bsp_uart.c  bsp_uart.h  digital_sample_data.h  main.cpp  mnist_cnn_quant_model_data.h  test_input_digital.h
